feat: competition settings and results
